--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hello-pangea/dnd": "^17.0.0",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.7.7",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.447.0",
@@ -20,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
