--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,12 +15,13 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
+    "strict": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
 
     "baseUrl": ".",
+    
   },
   "include": ["src"]
 }
