--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/index.html"
+        "src": "/(.*)",      
+        "dest": "/index.html",
+        "status": 200
+      }
+    ],
+    "headers": [
+      {
+        "source": "/(.*)",
+        "headers": [
+          { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        ]
       }
     ]
   }
