--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "builds": [
     {
-      "src": "build/**/*",
-      "use": "@vercel/static-build"
+       "src": "dist/**/*",
+        "use": "@vercel/static-build"
     }
   ],
   "routes": [
