--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,19 @@
   "version": 2,
   "builds": [
     {
-       "src": "dist/**/*",
-        "use": "@vercel/static-build"
+      "src": "dist/**/*",
+      "use": "@vercel/static-build"
     }
   ],
   "routes": [
+    {
+      "src": "^/assets/(.*)$",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "continue": true
+    },
+    {
+      "handle": "filesystem"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.html"
@@ -14,9 +22,34 @@
   ],
   "headers": [
     {
+      "source": "/(.*)\\.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)\\.css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        }
       ]
     }
   ]
