--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.2.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.17",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
