--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.11.17",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.447.0",
+    "ngrok": "^5.0.0-beta.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
